# remote-claude

./: README.md  claude_md_instructions.md  example_clusters.yaml  install.sh  pyproject.toml
remote_claude_mcp/: __init__.py  __main__.py  cli.py  config.py  proxy.py  server.py
remote_claude_mcp/remote_tools/: edit  read
ssh_gateway_mcp/: __init__.py  __main__.py  config.py  proxy.py  server.py
