[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-gateway-mcp"
version = "0.1.0"
description = "MCP server that proxies Claude Code tools to remote clusters via SSH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
ssh-gateway-mcp = "ssh_gateway_mcp.__main__:main"
